# creating-autonomous-car

./: .gitignore  DEBUG.md  README.md  TODO.md  build_docker.sh  build_packages_on_car.sh  build_packages_on_local_pc.sh  cyclonedds.xml  data_logger.py  docker-compose.yml  lap_timer.py  plot_waypoints.py  relay_initialpose.py
.devcontainer/: Dockerfile  devcontainer.json
.install_utils/: pip_req.txt
controller/: package.xml  setup.py
controller/controller/: PP.py  PP.py.orig  PP_0528_prev.py  PP_copy.py  PP_prev.py  best.py  controller.py  controller_ros.py  estop copy 2.py  estop.py  gapfollow copy 2.py  gapfollow copy 3.py  gapfollow copy 4.py  gapfollow copy 5.py  gapfollow.py  wallfollow copy 2.py  wallfollow.py  wallfollow_final.py
f110_msgs/: CMakeLists.txt  package.xml
f110_msgs/msg/: BehaviorStrategy.msg  OTWpntArray.msg  Obstacle.msg  Prediction.msg  PredictionArray.msg  WpntArray.msg
perception/: package.xml  setup.py
perception/perception/: detect.py  detect_ros.py  tracking.py  tracking_ros.py
planner/: package.xml  setup.py
planner/launch/: create_path.launch.xml
planner/planner/: centerline_extractor.py.orig  local_planning.py  mpc_local_planner.py  mpc_local_planner_prev.py  track_bounds.py  trajectory_optimizer.py  trajectory_optimizer.py.orig  waypoint_publisher.py
ros2_tutorial/beginner_tutorials/: package.xml  setup.py
ros2_tutorial/beginner_tutorials/beginner_tutorials/: listener.py  talker.py
ros2_tutorial/beginner_tutorials/launch/: listener.launch.xml  multi.launch.xml  talker.launch.xml
ros2_tutorial/turtlesim_tf2_bringup/: package.xml  setup.cfg  setup.py
ros2_tutorial/turtlesim_tf2_bringup/launch/: turtlesim_tf2.launch.py  turtlesim_tf2.launch.xml
sensor/urg_node/: CHANGELOG.rst  package.xml
sensor/urg_node/launch/: urg_lidar.launch  urg_lidar.launch.xml  urg_node_ethernet.yaml  urg_node_launch.py
sensor/vesc/vesc_driver/: CMakeLists.txt  package.xml
simulator/f1tenth_gym/: setup.py
simulator/f1tenth_gym/examples/: waypoint_follow.py
simulator/f1tenth_gym_ros/: package.xml  setup.py
simulator/f1tenth_gym_ros/config/: ego_racecar.xacro  sim.yaml
simulator/f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge copy.py  gym_bridge.py
simulator/f1tenth_gym_ros/launch/: gym_bridge_launch.py
simulator/obstacle_publisher/: README.md  package.xml  setup.cfg  setup.py
slam/cartographer_ros/cartographer_ros/: CMakeLists.txt
slam/range_libc/: .gitignore
stack_master/: CMakeLists.txt  package.xml
stack_master/config/: ekf_cartographer.yaml  ekf_pf.yaml  local_planning.yaml  localization_2d.lua  localization_2d_sim.lua  mapping_2d.lua  mapping_2d_sim.lua  mpc_local_planning.yaml  mpc_local_planning_prev.yaml  pf.yaml  ppc.yaml  ppc_prev.yaml  reactive_controller copy 2.yaml  reactive_controller copy.yaml  reactive_controller.yaml  trajectory_optimizer.yaml  trajectory_optimizer.yaml.orig_speed  vehicle_config.yaml  vesc_config.yaml
stack_master/launch/: base_system.launch.xml  cartographer_localization.launch.xml  create_path.launch.xml  local_planning.launch.xml  low_level.launch.xml  mapping.launch.xml  middle_level.launch.xml  obstacle_publisher.launch.xml  particle_filter.launch.xml  ppc.launch.xml  reactive.launch.xml  sensors.launch.xml
stack_master/maps/: .gitignore
stack_master/scripts/: finish_map.py  keyboard_joy_node.py  map_relay_node.py  pose_to_odom_node.py  set_initial_pose_node.py  simple_mux_node.py  waypoint_spline_editor.py
(+90 files in other folders)
