<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_tf2_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and resources to run the turtlesim TF2 tutorial demo.</description>
  <maintainer email="dbs2911@unist.ac.kr">yh</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtle_tf2_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_tools</exec_depend>
  <exec_depend>rqt_tf_tree</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
